service handle call back; next: init db

--- a/app/src/main/res/raw/kb_default.yaml
+++ b/app/src/main/res/raw/kb_default.yaml
@@ -87,7 +87,7 @@ rows:
         key_width: 1.5
       - type: func
         text: ——
-        value: " "
+        value: "space"
       - type: func
         text: "."
         value: semicolon
